[package]
name = "smap"
version = "1.0.1"
edition = "2021"


[profile.release]
opt-level = 3

[dependencies]
# ini
configparser = "3.1.0"

# cli
clap = { version = "4.5.21", features = ["derive"] }

# log
log = "0.4.22"
log4rs = "1.3.0"

# time
chrono = "0.4.38"

#hash
ahash = "0.8.11"

# input output
csv = "1.3.1"

# static
once_cell = { version = "1.20.2", features = [] }

rayon = "1.10.0"
# dns
trust-dns-resolver = "0.23.2"

# network interface
default-net = "0.22.0"
rand = "0.8.5"
rand_distr = "0.4.3"
aes = { version = "0.8.4", features = [] }

# big number
num-bigint = "0.4.6"
num-traits = "0.2.19"

# receiver
pcap = "2.2.0"

# bitmap
bitvec = "1.0.1"

libc = "0.2.167"

regex = "1.11.1"

rust_decimal = "1.36.0"

ordered-float = "4.5.0"

uint = "0.10.0"

